# quadratic_equation

./: CMakeLists.txt  README.md  README.mv
include/: quadratic_equation.h
src/: CMakeLists.txt  quadratic_equation.c
test/: CMakeLists.txt  rand_test.c  test.c
